--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="restrict_network">Network (addresses)</string>
     <string name="restrict_phone">Phone (ID, numbers, calls)</string>
     <string name="restrict_storage">External storage (SD card)</string>
+    <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">System (installed apps)</string>
     <string name="restrict_view">View (browser)</string>
     <string name="settings_restrict">Check to restrict:</string>
