--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -35,7 +35,8 @@
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">System (installierte Apps)</string>
     <string name="restrict_view">View (browser)</string>
-    <string name="settings_restrict">Haken setzen zum einschränken:</string>
+    <string name="title_category">Category to restrict:</string>
+    <string name="title_restrict">Haken setzen zum einschränken:</string>
     <string name="settings_expert">Expertenmodus</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
