--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -35,7 +35,8 @@
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">Σύστημα (εγκατεστημένες εφαρμογές)</string>
     <string name="restrict_view">View (browser)</string>
-    <string name="settings_restrict">Επιλέξτε για περιορισμό:</string>
+    <string name="title_category">Category to restrict:</string>
+    <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="settings_expert">Για προχωρημένους</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
