--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -35,7 +35,8 @@
     <string name="restrict_shell">Shell (commando&#8217;s, superuser)</string>
     <string name="restrict_system">Systeem (geïnstalleerde apps)</string>
     <string name="restrict_view">Tonen (browser)</string>
-    <string name="settings_restrict">Vink om te beperken:</string>
+    <string name="title_category">Te beperken categorie:</string>
+    <string name="title_restrict">Vink om te beperken:</string>
     <string name="settings_expert">Expert modus</string>
     <string name="settings_lat">Breedte</string>
     <string name="settings_lon">Lengte</string>
