--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -35,7 +35,8 @@
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
     <string name="restrict_view">Pogled (brskalnik)</string>
-    <string name="settings_restrict">Oblkjukaj za omejitev pravic:</string>
+    <string name="title_category">Category to restrict:</string>
+    <string name="title_restrict">Oblkjukaj za omejitev pravic:</string>
     <string name="settings_expert">Napredni način</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
