--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -19,15 +19,16 @@
     <string name="msg_restricted" formatted="false">%s מוגבל על ידי XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="restrict_accounts">חשבונות (גוגל, פייסבוק וכו)</string>
+    <string name="restrict_audio">Audio (microphone)</string>
     <string name="restrict_boot">עלייה עם המערכת</string>
     <string name="restrict_browser">דפדן(מועדפים\היסטוריה)</string>
     <string name="restrict_calendar">יומן</string>
     <string name="restrict_calling">חיוג ( טלפון, סמס, הודעת מולטימדיה)</string>
+    <string name="restrict_camera">Camera (photo, video)</string>
     <string name="restrict_contacts">אנשי קשר</string>
     <string name="restrict_identification">מספר זיהוי של המכשיר</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">מיקום</string>
-    <string name="restrict_media">מדיה ( קול, תמונות ווידאו)</string>
     <string name="restrict_messages">הודעות (סמס,הודעת מולטימדיה)</string>
     <string name="restrict_network">רשת (כתובות)</string>
     <string name="restrict_phone">טלפון(מזהה, מספרים, שיחות)</string>
