--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -19,16 +19,15 @@
     <string name="msg_restricted" formatted="false">%s eingeschränkt durch XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="restrict_accounts">Konten (Google, Facebook, etc.)</string>
-    <string name="restrict_audio">Audio (microphone)</string>
     <string name="restrict_boot">Boot (Beim Systemstart ausführen)</string>
     <string name="restrict_browser">Browser (Lesezeichen/Verlauf)</string>
     <string name="restrict_calendar">Kalender</string>
     <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
-    <string name="restrict_camera">Camera (photo, video)</string>
     <string name="restrict_contacts">Kontakte</string>
     <string name="restrict_identification">Identität (Gerät)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Standort (genau/ungefähr)</string>
+    <string name="restrict_media">Medien (Audio, Foto, Video)</string>
     <string name="restrict_messages">Nachrichten (SMS, MMS)</string>
     <string name="restrict_network">Network (addresses)</string>
     <string name="restrict_phone">Telefon (ID, Nummern, Anrufe)</string>
