--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -19,16 +19,15 @@
     <string name="msg_restricted" formatted="false">Pravica %s omejena s programom XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
     <string name="restrict_accounts">Računi (Google, Facebook, itd)</string>
-    <string name="restrict_audio">Audio (microphone)</string>
     <string name="restrict_boot">Zagon (zagon programa ob zagonu sistema)</string>
     <string name="restrict_browser">Brskalnik (zaznamki/zgodovina)</string>
     <string name="restrict_calendar">Koledar</string>
     <string name="restrict_calling">Klicanje (telefon, SMS, MMS)</string>
-    <string name="restrict_camera">Camera (photo, video)</string>
     <string name="restrict_contacts">Stiki</string>
     <string name="restrict_identification">Identifikacija (naprava)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Lokacija (približna/natančna)</string>
+    <string name="restrict_media">Medij (zvok, slike, video)</string>
     <string name="restrict_messages">Sporočila (SMS, MMS)</string>
     <string name="restrict_network">Omrežje (naslovi)</string>
     <string name="restrict_phone">Telefon (ID, številke, klici)</string>
