--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,16 +19,15 @@
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
-    <string name="restrict_audio">Audio (microphone)</string>
     <string name="restrict_boot">Boot (run at system start)</string>
     <string name="restrict_browser">Browser (bookmarks/history)</string>
     <string name="restrict_calendar">Calendar</string>
     <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
-    <string name="restrict_camera">Camera (photo, video)</string>
     <string name="restrict_contacts">Contacts</string>
     <string name="restrict_identification">Identification (device)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Location (fine/coarse)</string>
+    <string name="restrict_media">Media (audio, photo, video)</string>
     <string name="restrict_messages">Messages (SMS, MMS)</string>
     <string name="restrict_network">Network (addresses)</string>
     <string name="restrict_phone">Phone (ID, numbers, calls)</string>
