--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -3,43 +3,43 @@
     <string name="app_name">XPrivacy</string>
     <string name="app_wrongandroid">Δοκιμασμένο μόνο σε έκδόσεις Android 4.1 και 4.2 (JellyBean)</string>
     <string name="app_notxposed" formatted="false">Δεν έχει εγκατασταθεί η έκδοση %d+ του Xposed framework</string>
-    <string name="app_notenabled">XPrivacy is not enabled in the Xposed installer</string>
+    <string name="app_notenabled">Το XPrivacy δεν είναι ενεργοποιημένο στο Xposed installer</string>
     <string name="app_version" formatted="false">Έκδοση XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="app_info">Πληροφορίες: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Ρυθμίσεις</string>
-    <string name="menu_update">Check for update</string>
+    <string name="menu_update">Έλεγχος για ενημερώσεις</string>
     <string name="menu_report">Αναφορά σφάλματος</string>
-    <string name="menu_export">Export</string>
-    <string name="menu_import">Import</string>
+    <string name="menu_export">Εξαγωγή</string>
+    <string name="menu_import">Εισαγωγή</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">Σχετικά</string>
-    <string name="msg_noupdate">No update available</string>
+    <string name="msg_noupdate">Δεν υπάρχουν διαθέσιμες ενημερώσεις</string>
     <string name="msg_restricted" formatted="false">%s περιορίστικε από το XPrivacy</string>
-    <string name="msg_licensed" formatted="false">Licensed to: %s</string>
+    <string name="msg_licensed" formatted="false">Άδεια για: %s</string>
     <string name="restrict_accounts">Λογαριασμοί (Google, Facebook, κλπ)</string>
     <string name="restrict_boot">Εκκίνηση (τρέχει κατά την εκκίνηση του συστήματος)</string>
     <string name="restrict_browser">Browser (σελιδοδείκτες/ιστορικό)</string>
     <string name="restrict_calendar">Ημερολόγιο</string>
-    <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
+    <string name="restrict_calling">Κλήσεις (τηλέφωνο, SMS, MMS)</string>
     <string name="restrict_contacts">Επαφές</string>
     <string name="restrict_identification">Ταυτότητα (συσκευή)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Τοποθεσία (ακριβής/μερική)</string>
     <string name="restrict_media">Πολυμέσα (ήχοι, φωτογραφίες, βίντεο)</string>
     <string name="restrict_messages">Μηνύματα (SMS, MMS)</string>
-    <string name="restrict_network">Network (addresses)</string>
+    <string name="restrict_network">Δίκτυο (διευθύνσεις)</string>
     <string name="restrict_phone">Τηλέφωνο (στοιχεία, αριθμοί, κλήσεις)</string>
     <string name="restrict_storage">Εξ. αποθηκευτικός χώρος (κάρτα SD)</string>
-    <string name="restrict_shell">Shell (commands, superuser)</string>
+    <string name="restrict_shell">Shell (εντολές, superuser)</string>
     <string name="restrict_system">Σύστημα (εγκατεστημένες εφαρμογές)</string>
-    <string name="restrict_view">View (browser)</string>
-    <string name="title_category">Category to restrict:</string>
+    <string name="restrict_view">Εμφάνιση (browser)</string>
+    <string name="title_category">Κατηγορία για περιορισμό:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="settings_expert">Για προχωρημένους</string>
-    <string name="settings_lat">Latitude</string>
-    <string name="settings_lon">Longitude</string>
+    <string name="settings_lat">Γεωγρ. πλάτος</string>
+    <string name="settings_lon">Γεωγρ. μήκος</string>
     <string name="help_application">Εφαρμογή</string>
     <string name="help_internet">έχει άδεια internet</string>
     <string name="help_granted">έχει άδεια Android</string>
