--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1,10 +1,12 @@
 <resources>
 
+    <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">Verzia Xposed frameworku %d+ nie je nainštalovaná</string>
     <string name="app_notenabled">Aplikácia XPrivacy nie je aktivovaná v Xposed</string>
     <string name="app_wrongandroid">Testované len s Android verziou 4.1 a 4.2 (JellyBean)</string>
     <string name="app_version" formatted="false">Verzia XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Verzia Xposed: %d</string>
+    <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Informácie: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Nastavenia</string>
     <string name="menu_update">Aktualizovať</string>
