--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -19,16 +19,15 @@
     <string name="msg_restricted" formatted="false">%s 被XPrivacy限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
     <string name="restrict_accounts">账户 (Google, Facebook等等)</string>
-    <string name="restrict_audio">Audio (microphone)</string>
     <string name="restrict_boot">启动 (在开机时运行)</string>
     <string name="restrict_browser">浏览器 (书签/历史)</string>
     <string name="restrict_calendar">日历</string>
     <string name="restrict_calling">通话 (语音, 短信, 彩信)</string>
-    <string name="restrict_camera">Camera (photo, video)</string>
     <string name="restrict_contacts">联系人</string>
     <string name="restrict_identification">识别码 (设备)</string>
     <string name="restrict_internet">互联网</string>
     <string name="restrict_location">位置 (精细/粗略)</string>
+    <string name="restrict_media">媒体 (声音, 图片, 视频)</string>
     <string name="restrict_messages">信息 (短信, 彩信)</string>
     <string name="restrict_network">网络 (地址)</string>
     <string name="restrict_phone">手机 (ID, 电话号码, 通话)</string>
