--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_import">Import</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
+    <string name="menu_all">All</string>
     <string name="msg_noupdate">No update available</string>
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
