--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_import">Εισαγωγή</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">Σχετικά</string>
+    <string name="menu_all">All</string>
     <string name="msg_noupdate">Δεν υπάρχουν διαθέσιμες ενημερώσεις</string>
     <string name="msg_restricted" formatted="false">%s περιορίστικε από το XPrivacy</string>
     <string name="msg_licensed" formatted="false">Άδεια για: %s</string>
