--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_import">Importer</string>
     <string name="menu_pro">Version pro</string>
     <string name="menu_about">À propos</string>
+    <string name="menu_all">All</string>
     <string name="msg_noupdate">Pas de mises à jour disponible</string>
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
