--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_import">Importovať</string>
     <string name="menu_pro">Pro verzia</string>
     <string name="menu_about">O aplikácii</string>
+    <string name="menu_all">All</string>
     <string name="msg_noupdate">K dispozícii nie je žiadna aktualizácia</string>
     <string name="msg_restricted" formatted="false">%s obmedzené XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
