--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_import">Uvozi</string>
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
+    <string name="menu_all">All</string>
     <string name="msg_noupdate">Na voljo ni posodobitev</string>
     <string name="msg_restricted" formatted="false">Pravica %s omejena s programom XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
