--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_import">导入</string>
     <string name="menu_pro">专业版</string>
     <string name="menu_about">关于</string>
+    <string name="menu_all">All</string>
     <string name="msg_noupdate">没有更新版本</string>
     <string name="msg_restricted" formatted="false">%s 被XPrivacy限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
