--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="settings_expert">Expert mode</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
+    <string name="settings_mac">MAC address</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
     <string name="help_granted">has Android permission</string>
