--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -41,6 +41,7 @@
     <string name="settings_expert">Expertenmodus</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
+    <string name="settings_mac">MAC address</string>
     <string name="help_application">Anwendung</string>
     <string name="help_internet">hat Internetberechtigung</string>
     <string name="help_granted">hat Android Berechtigung</string>
