--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -41,6 +41,7 @@
     <string name="settings_expert">专家模式</string>
     <string name="settings_lat">纬度</string>
     <string name="settings_lon">精度</string>
+    <string name="settings_mac">MAC address</string>
     <string name="help_application">应用</string>
     <string name="help_internet">可以联网</string>
     <string name="help_granted">有Android权限</string>
