--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -15,7 +15,7 @@
     <string name="menu_import">Uvozi</string>
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
-    <string name="menu_all">All</string>
+    <string name="menu_all">Vse</string>
     <string name="msg_noupdate">Na voljo ni posodobitev</string>
     <string name="msg_restricted" formatted="false">Pravica %s omejena s programom XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
@@ -33,15 +33,15 @@
     <string name="restrict_network">Omrežje (naslovi)</string>
     <string name="restrict_phone">Telefon (ID, številke, klici)</string>
     <string name="restrict_storage">Zunanja shramba (spominska kartica)</string>
-    <string name="restrict_shell">Shell (commands, superuser)</string>
+    <string name="restrict_shell">Lupina (ukazi, superuser)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
     <string name="restrict_view">Pogled (brskalnik)</string>
-    <string name="title_category">Category to restrict:</string>
+    <string name="title_category">Kategorije za omejitev:</string>
     <string name="title_restrict">Oblkjukaj za omejitev pravic:</string>
     <string name="settings_expert">Napredni način</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
-    <string name="settings_mac">MAC address</string>
+    <string name="settings_mac">MAC naslov</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetno dovoljenje</string>
     <string name="help_granted">uporablja Android dovoljenja</string>
