--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -28,7 +28,7 @@
     <string name="restrict_identification">Identifikácia (zariadenie)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Poloha (presná/približná)</string>
-    <string name="restrict_media">Media (audio, photo, video)</string>
+    <string name="restrict_media">Médiá (hudba, fotky, videá)</string>
     <string name="restrict_messages">Správy (SMS, MMS)</string>
     <string name="restrict_network">Sieť (adresy)</string>
     <string name="restrict_phone">Telefón (ID, čísla, hovory)</string>
