--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_report">Signaler un problème</string>
     <string name="menu_export">Exporter</string>
     <string name="menu_import">Importer</string>
+    <string name="menu_theme">Switch theme</string>
     <string name="menu_pro">Version pro</string>
     <string name="menu_about">À propos</string>
     <string name="menu_all">All</string>
