--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_report">Javi napako</string>
     <string name="menu_export">Izvozi</string>
     <string name="menu_import">Uvozi</string>
+    <string name="menu_theme">Switch theme</string>
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
     <string name="menu_all">Vse</string>
