--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -38,7 +38,7 @@
     <string name="restrict_system">システム (インストール済みアプリ)</string>
     <string name="restrict_view">表示 (ブラウザ)</string>
     <string name="title_category">制限するカテゴリ:</string>
-    <string name="title_restrict">制限の確認:</string>
+    <string name="title_restrict">チェックで制限:</string>
     <string name="settings_expert">上級者向けモード</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
