--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -13,10 +13,10 @@
     <string name="menu_report">Nahlásiť problém</string>
     <string name="menu_export">Exportovať</string>
     <string name="menu_import">Importovať</string>
-    <string name="menu_theme">Switch theme</string>
+    <string name="menu_theme">Prepnúť tému</string>
     <string name="menu_pro">Pro verzia</string>
     <string name="menu_about">O aplikácii</string>
-    <string name="menu_all">All</string>
+    <string name="menu_all">Všetko</string>
     <string name="msg_noupdate">K dispozícii nie je žiadna aktualizácia</string>
     <string name="msg_restricted" formatted="false">%s obmedzené XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
@@ -42,7 +42,7 @@
     <string name="settings_expert">Režim experta</string>
     <string name="settings_lat">Zemepisná šírka</string>
     <string name="settings_lon">Zemepisná dĺžka</string>
-    <string name="settings_mac">MAC address</string>
+    <string name="settings_mac">MAC adresa</string>
     <string name="help_application">Aplikácia</string>
     <string name="help_internet">má internetové oprávnenie</string>
     <string name="help_granted">má Android povolenie</string>
