Add actions to app option menu: Lauch app, Settings, Play Store

--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -17,6 +17,9 @@
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">Σχετικά</string>
     <string name="menu_all">All</string>
+    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Δεν υπάρχουν διαθέσιμες ενημερώσεις</string>
     <string name="msg_restricted" formatted="false">%s περιορίστικε από το XPrivacy</string>
     <string name="msg_licensed" formatted="false">Άδεια για: %s</string>
