--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -17,6 +17,9 @@
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">Über</string>
     <string name="menu_all">All</string>
+    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">No update available</string>
     <string name="msg_restricted" formatted="false">%s eingeschränkt durch XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
