--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -17,6 +17,9 @@
     <string name="menu_pro">גירסא מקצועית</string>
     <string name="menu_about">אודות</string>
     <string name="menu_all">All</string>
+    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">לא קיימים עדכונים</string>
     <string name="msg_restricted" formatted="false">%s מוגבל על ידי XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
