--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -17,6 +17,9 @@
     <string name="menu_pro">Versiunea Pro</string>
     <string name="menu_about">Despre</string>
     <string name="menu_all">Tot</string>
+    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Niciun update disponibil</string>
     <string name="msg_restricted" formatted="false">%s Restrictionat de XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licentiat pentru: %s</string>
