--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -17,6 +17,9 @@
     <string name="menu_pro">Pro verzia</string>
     <string name="menu_about">O aplikácii</string>
     <string name="menu_all">Všetko</string>
+    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">K dispozícii nie je žiadna aktualizácia</string>
     <string name="msg_restricted" formatted="false">%s obmedzené XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
