--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -17,6 +17,9 @@
     <string name="menu_pro">专业版</string>
     <string name="menu_about">关于</string>
     <string name="menu_all">All</string>
+    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">没有更新版本</string>
     <string name="msg_restricted" formatted="false">%s 被XPrivacy限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
