--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -8,23 +8,24 @@
     <string name="app_xversion" formatted="false">Xposed framework версия: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Информация: https://github.com/M66B/XPrivacy/</string>
+    <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#restrictions</string>
     <string name="menu_settings">Настройки</string>
     <string name="menu_update">Проверка за обновление</string>
     <string name="menu_report">Съобщаване за проблем</string>
     <string name="menu_export">Експортиране</string>
     <string name="menu_import">Импортиране</string>
-    <string name="menu_theme">Switch theme</string>
+    <string name="menu_theme">Смяна на темата</string>
     <string name="menu_pro">Професионална версия</string>
     <string name="menu_about">Относно</string>
-    <string name="menu_all">All</string>
+    <string name="menu_all">Всички</string>
     <string name="msg_noupdate">Няма налично обновление</string>
     <string name="msg_restricted" formatted="false">%s е ограничен от XPrivacy</string>
-    <string name="msg_licensed" formatted="false">Licensed to: %s</string>
+    <string name="msg_licensed" formatted="false">Лицензирано на: %s</string>
     <string name="restrict_accounts">Сметки (Google, Facebook и т.н.)</string>
     <string name="restrict_boot">Стартиране (при пускане на системата)</string>
     <string name="restrict_browser">Браузър (отметки/история)</string>
     <string name="restrict_calendar">Календар</string>
-    <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
+    <string name="restrict_calling">Обаждания, SMS, MMS)</string>
     <string name="restrict_contacts">Контакти</string>
     <string name="restrict_identification">Идентификация (устройство, Wi-Fi)</string>
     <string name="restrict_internet">Интернет</string>
@@ -34,15 +35,15 @@
     <string name="restrict_network">Мрежа (адреси)</string>
     <string name="restrict_phone">Телефон (ID, номера, обаждания)</string>
     <string name="restrict_storage">Място за съхранение (SD карта)</string>
-    <string name="restrict_shell">Shell (commands, superuser)</string>
+    <string name="restrict_shell">Терминал (команди, суперпотребител)</string>
     <string name="restrict_system">Система (инсталирани приложения)</string>
-    <string name="restrict_view">View (browser)</string>
-    <string name="title_category">Category to restrict:</string>
+    <string name="restrict_view">Преглед (браузър)</string>
+    <string name="title_category">Категория за ограничаване:</string>
     <string name="title_restrict">Отбележи за ограничаване:</string>
     <string name="settings_expert">Режим за експерти</string>
     <string name="settings_lat">Геогр. ширина</string>
     <string name="settings_lon">Геогр. дължина</string>
-    <string name="settings_mac">MAC address</string>
+    <string name="settings_mac">MAC адрес</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
     <string name="help_granted">има разрешение в Android</string>
