--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -20,6 +20,7 @@
     <string name="msg_noupdate">>Kein Update verfügbar</string>
     <string name="msg_restricted" formatted="false">%s eingeschränkt durch XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
+    <string name="msg_done">Done</string>
     <string name="restrict_accounts">Konten (Google, Facebook, etc.)</string>
     <string name="restrict_boot">Boot (Beim Systemstart ausführen)</string>
     <string name="restrict_browser">Browser (Lesezeichen/Verlauf)</string>
