--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -20,6 +20,7 @@
     <string name="msg_noupdate">Pas de mises à jour disponible</string>
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
+    <string name="msg_done">Done</string>
     <string name="restrict_accounts">Comptes (Google, Facebook, etc)</string>
     <string name="restrict_boot">Boot (se lance au démarrage)</string>
     <string name="restrict_browser">Navigateur (marque-pages/historique)</string>
