Updated Spanish translation

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -17,8 +17,8 @@
     <string name="menu_pro">Versión Pro</string>
     <string name="menu_about">Acerca de</string>
     <string name="menu_all">Todas</string>
-    <string name="menu_app_launch">Launch app</string>
-    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_launch">Ejecutar aplicación</string>
+    <string name="menu_app_settings">Configuración</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">No hay actualizaciones disponibles</string>
     <string name="msg_restricted">%s restringido por XPrivacy</string>
