Updated Japanese translation

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -17,13 +17,13 @@
     <string name="menu_pro">Proバージョン</string>
     <string name="menu_about">アプリ情報</string>
     <string name="menu_all">全て</string>
-    <string name="menu_app_launch">Launch app</string>
-    <string name="menu_app_settings">Settings</string>
-    <string name="menu_app_store">Play Store</string>
+    <string name="menu_app_launch">アプリを起動</string>
+    <string name="menu_app_settings">設定</string>
+    <string name="menu_app_store">Playストア</string>
     <string name="msg_noupdate">更新はありません</string>
     <string name="msg_restricted" formatted="false">%s をXPrivacyが制限しました</string>
     <string name="msg_licensed" formatted="false">ライセンス先: %s</string>
-    <string name="msg_done">Done</string>
+    <string name="msg_done">完了</string>
     <string name="restrict_accounts">アカウント (Google, Facebookなど)</string>
     <string name="restrict_boot">起動 (システム開始時に実行)</string>
     <string name="restrict_browser">ブラウザ (お気に入り/履歴)</string>
