--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_pro">Version pro</string>
     <string name="menu_about">À propos</string>
     <string name="menu_all">All</string>
-    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Pas de mises à jour disponible</string>
