--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_pro">Професионална версия</string>
     <string name="menu_about">Относно</string>
     <string name="menu_all">Всички</string>
-    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Няма налично обновление</string>
