--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">Über</string>
     <string name="menu_all">Alle</string>
-    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">>Kein Update verfügbar</string>
