--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_pro">גירסא מקצועית</string>
     <string name="menu_about">אודות</string>
     <string name="menu_all">All</string>
-    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">לא קיימים עדכונים</string>
