--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -17,8 +17,8 @@
     <string name="menu_pro">Pro versie</string>
     <string name="menu_about">Over</string>
     <string name="menu_all">Alles</string>
-    <string name="menu_app_launch">Launch app</string>
-    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_launch">Uitvoeren</string>
+    <string name="menu_app_settings">Instellingen</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Geen nieuwe versie beschikbaar</string>
     <string name="msg_restricted" formatted="false">%s beperkt door XPrivacy</string>
