--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_pro">Versiunea Pro</string>
     <string name="menu_about">Despre</string>
     <string name="menu_all">Tot</string>
-    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Niciun update disponibil</string>
