--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
     <string name="menu_all">All</string>
-    <string name="menu_app_launch">Launch app</string>
+    <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">Settings</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">No update available</string>
