--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -17,13 +17,13 @@
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
     <string name="menu_all">Vse</string>
-    <string name="menu_app_launch">Launch</string>
-    <string name="menu_app_settings">Settings</string>
-    <string name="menu_app_store">Play Store</string>
+    <string name="menu_app_launch">Zaženi</string>
+    <string name="menu_app_settings">Nastavitve</string>
+    <string name="menu_app_store">Trgovina Play</string>
     <string name="msg_noupdate">Na voljo ni posodobitev</string>
     <string name="msg_restricted" formatted="false">Pravica %s omejena s programom XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
-    <string name="msg_done">Done</string>
+    <string name="msg_done">Dokončano</string>
     <string name="restrict_accounts">Računi (Google, Facebook, itd)</string>
     <string name="restrict_boot">Zagon (zagon programa ob zagonu sistema)</string>
     <string name="restrict_browser">Brskalnik (zaznamki/zgodovina)</string>
