--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -47,6 +47,7 @@
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">MAC address</string>
+    <string name="settings_phone">Phone number</string>
     <string name="help_application">אפליקציה</string>
     <string name="help_internet">יש הרשאות אינטרנט</string>
     <string name="help_granted">יש הרשאות אנדרואיד</string>
