--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -48,6 +48,7 @@
     <string name="settings_lon">Longitud</string>
     <string name="settings_mac">Dirección MAC</string>
     <string name="settings_phone">Phone number</string>
+    <string name="settings_id">Android ID</string>
     <string name="help_application">Aplicación</string>
     <string name="help_internet">tiene permisos para Internet</string>
     <string name="help_granted">tiene permisos por Android</string>
