--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -48,6 +48,7 @@
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">MAC address</string>
     <string name="settings_phone">Phone number</string>
+    <string name="settings_id">Android ID</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
