--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -48,6 +48,7 @@
     <string name="settings_lon">Longitudine</string>
     <string name="settings_mac">MAC address</string>
     <string name="settings_phone">Phone number</string>
+    <string name="settings_id">Android ID</string>
     <string name="help_application">Aplicatie</string>
     <string name="help_internet">are permisiune Internet</string>
     <string name="help_granted">are permisiune Android</string>
